refactor: optimize codes